# on_chain_data_testing_project

./: README.md  combined_ata_swap.py  config.py  create_ata_account.py  create_valid_token_account.py  get_twitter_follower.py  get_tx_sender.py  jupiter_swap.py  jupiter_swap_gas_payer.py  jupiter_swap_instruction_api.py  jupiter_swap_instruction_api_fee_payer.py  partitial_sign.py  pyproject.toml  solana_setup.py  temp.py  try_to_payer.py
